force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/bpats__ASM_Daxtra_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>ASM Daxtra Credentials</label>
    <pluralLabel>ASM Daxtra Credentials</pluralLabel>
</CustomObject>