force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_Id__c</fullName>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>