force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Database__c.field-meta.xml
<CustomField>
    <fullName>bpats__Database__c</fullName>
    <label>Database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>