force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Encrypt_Key__c.field-meta.xml
<CustomField>
    <fullName>bpats__Encrypt_Key__c</fullName>
    <label>Encryption Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>