force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Password__c.field-meta.xml
<CustomField>
    <fullName>bpats__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>