force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Search_Match_Url__c.field-meta.xml
<CustomField>
    <fullName>bpats__Search_Match_Url__c</fullName>
    <label>Search Match Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>