force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Secret__c.field-meta.xml
<CustomField>
    <fullName>bpats__Secret__c</fullName>
    <label>Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>