force-app/main/default/objects/bpats__ASM_Daxtra_Credentials__mdt/fields/bpats__Username__c.field-meta.xml
<CustomField>
    <fullName>bpats__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>